@@ -1,7 +1,139 @@
+// package com.investmentbanking.dealpipeline.config;
+
+// import com.fasterxml.jackson.databind.ObjectMapper;
+// import com.investmentbanking.dealpipeline.dto.ApiResponse;
+// import com.investmentbanking.dealpipeline.security.JwtAuthenticationEntryPoint;
+// import com.investmentbanking.dealpipeline.security.JwtAuthenticationFilter;
+// import lombok.RequiredArgsConstructor;
+// import org.springframework.context.annotation.Bean;
+// import org.springframework.context.annotation.Configuration;
+// import org.springframework.security.authentication.AuthenticationManager;
+// import org.springframework.security.authentication.AuthenticationProvider;
+// import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+// import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+// import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+// import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+// import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+// import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+// import org.springframework.security.config.http.SessionCreationPolicy;
+// import org.springframework.security.core.userdetails.UserDetailsService;
+// import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+// import org.springframework.security.crypto.password.PasswordEncoder;
+// import org.springframework.security.web.SecurityFilterChain;
+// import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+// import org.springframework.web.cors.CorsConfiguration;
+// import org.springframework.web.cors.CorsConfigurationSource;
+// import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+// import jakarta.servlet.http.HttpServletResponse;
+// import java.io.IOException;
+// import java.util.Arrays;
+// import java.util.List;
+
+// @Configuration
+// @EnableWebSecurity
+// @EnableMethodSecurity
+// @RequiredArgsConstructor
+// public class SecurityConfig {
+    
+//     private final UserDetailsService userDetailsService;
+//     private final JwtAuthenticationFilter jwtAuthenticationFilter;
+//     private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
+//     private final ObjectMapper objectMapper;
+    
+//     @Bean
+//     public PasswordEncoder passwordEncoder() {
+//         return new BCryptPasswordEncoder();
+//     }
+    
+//     @Bean
+//     public AuthenticationProvider authenticationProvider() {
+//         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+//         authProvider.setUserDetailsService(userDetailsService);
+//         authProvider.setPasswordEncoder(passwordEncoder());
+//         return authProvider;
+//     }
+    
+//     @Bean
+//     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+//         return config.getAuthenticationManager();
+//     }
+    
+//     @Bean
+//     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+//         http
+//             // Disable CSRF for REST API (stateless)
+//             .csrf(AbstractHttpConfigurer::disable)
+            
+//             // Configure CORS
+//             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            
+//             // Configure exception handling
+//             .exceptionHandling(exception -> exception
+//                 .authenticationEntryPoint(jwtAuthenticationEntryPoint)
+//                 .accessDeniedHandler((request, response, accessDeniedException) -> {
+//                     response.setContentType("application/json");
+//                     response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+//                     try {
+//                         ApiResponse<Object> apiResponse = ApiResponse.error("Access denied. Insufficient permissions.");
+//                         response.getWriter().write(objectMapper.writeValueAsString(apiResponse));
+//                     } catch (IOException e) {
+//                         response.getWriter().write("{\"success\":false,\"message\":\"Access denied. Insufficient permissions.\"}");
+//                     }
+//                 }))
+            
+//             // Configure authorization rules
+//             .authorizeHttpRequests(auth -> auth
+//                 // Public endpoints - no authentication required
+//                 .requestMatchers("/api/auth/**").permitAll()
+//                 .requestMatchers("/api/token/verify", "/api/token/decode").permitAll()
+                
+//                 // Authenticated endpoints - require valid JWT token
+//                 .requestMatchers("/api/users/**").authenticated()
+//                 .requestMatchers("/api/deals/**").authenticated()
+//                 .requestMatchers("/api/token/**").authenticated()
+                
+//                 // Admin-only endpoints - require ADMIN role
+//                 .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                
+//                 // All other requests require authentication
+//                 .anyRequest().authenticated())
+            
+//             // Stateless session management (no HTTP session)
+//             .sessionManagement(session -> session
+//                 .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            
+//             // Configure authentication provider
+//             .authenticationProvider(authenticationProvider())
+            
+//             // Add JWT filter before UsernamePasswordAuthenticationFilter
+//             .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+        
+//         return http.build();
+//     }
+    
+//     @Bean
+//     public CorsConfigurationSource corsConfigurationSource() {
+//         CorsConfiguration configuration = new CorsConfiguration();
+//         configuration.setAllowedOrigins(List.of("http://3.7.66.205",
+//                                                 "http://localhost:3000",
+//                                                 "http://localhost:4200"));
+//         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+//         configuration.setAllowedHeaders(List.of("*"));
+//         configuration.setAllowCredentials(true);
+//         configuration.setMaxAge(3600L);
+        
+//         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//         source.registerCorsConfiguration("/**", configuration);
+//         return source;
+//     }
+// }
+
+
+
 package com.investmentbanking.dealpipeline.config;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.investmentbanking.dealpipeline.dto.ApiResponse;
 import com.investmentbanking.dealpipeline.security.JwtAuthenticationEntryPoint;
 import com.investmentbanking.dealpipeline.security.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
@@ -14,7 +146,6 @@ import org.springframework.security.config.annotation.authentication.configurati
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -25,9 +156,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import jakarta.servlet.http.HttpServletResponse;
-import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -35,96 +163,94 @@ import java.util.List;
 @EnableMethodSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
-    
+
     private final UserDetailsService userDetailsService;
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
     private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
     private final ObjectMapper objectMapper;
-    
+
+    // 🔐 Password encoder
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
-    
+
+    // 🔐 Authentication provider
     @Bean
     public AuthenticationProvider authenticationProvider() {
-        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-        authProvider.setUserDetailsService(userDetailsService);
-        authProvider.setPasswordEncoder(passwordEncoder());
-        return authProvider;
+        DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
+        provider.setUserDetailsService(userDetailsService);
+        provider.setPasswordEncoder(passwordEncoder());
+        return provider;
     }
-    
+
+    // 🔐 Authentication manager
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+    public AuthenticationManager authenticationManager(
+            AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
     }
-    
+
+    // 🌍 MAIN SECURITY CONFIG (IMPORTANT)
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+
         http
-            // Disable CSRF for REST API (stateless)
-            .csrf(AbstractHttpConfigurer::disable)
-            
-            // Configure CORS
+            // Disable CSRF for REST APIs
+            .csrf(csrf -> csrf.disable())
+
+            // Enable CORS
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            
-            // Configure exception handling
-            .exceptionHandling(exception -> exception
-                .authenticationEntryPoint(jwtAuthenticationEntryPoint)
-                .accessDeniedHandler((request, response, accessDeniedException) -> {
-                    response.setContentType("application/json");
-                    response.setStatus(HttpServletResponse.SC_FORBIDDEN);
-                    try {
-                        ApiResponse<Object> apiResponse = ApiResponse.error("Access denied. Insufficient permissions.");
-                        response.getWriter().write(objectMapper.writeValueAsString(apiResponse));
-                    } catch (IOException e) {
-                        response.getWriter().write("{\"success\":false,\"message\":\"Access denied. Insufficient permissions.\"}");
-                    }
-                }))
-            
-            // Configure authorization rules
+
+            // Stateless session (JWT-based)
+            .sessionManagement(session ->
+                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+            )
+
+            // ❗ TEMP: Allow all requests (for frontend-backend connectivity)
             .authorizeHttpRequests(auth -> auth
-                // Public endpoints - no authentication required
-                .requestMatchers("/api/auth/**").permitAll()
-                .requestMatchers("/api/token/verify", "/api/token/decode").permitAll()
-                
-                // Authenticated endpoints - require valid JWT token
-                .requestMatchers("/api/users/**").authenticated()
-                .requestMatchers("/api/deals/**").authenticated()
-                .requestMatchers("/api/token/**").authenticated()
-                
-                // Admin-only endpoints - require ADMIN role
-                .requestMatchers("/api/admin/**").hasRole("ADMIN")
-                
-                // All other requests require authentication
-                .anyRequest().authenticated())
-            
-            // Stateless session management (no HTTP session)
-            .sessionManagement(session -> session
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            
-            // Configure authentication provider
+                .anyRequest().permitAll()
+            )
+
+            // Exception handling
+            .exceptionHandling(ex ->
+                ex.authenticationEntryPoint(jwtAuthenticationEntryPoint)
+            )
+
+            // Authentication provider
             .authenticationProvider(authenticationProvider())
-            
-            // Add JWT filter before UsernamePasswordAuthenticationFilter
-            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-        
+
+            // JWT filter
+            .addFilterBefore(
+                jwtAuthenticationFilter,
+                UsernamePasswordAuthenticationFilter.class
+            );
+
         return http.build();
     }
-    
+
+    // 🌍 CORS CONFIGURATION (VERY IMPORTANT)
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://3.7.66.205",
-                                                "http://localhost:3000",
-                                                "http://localhost:4200"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
-        
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOrigins(List.of(
+                "http://localhost:4200",
+                "http://localhost:3000",
+                "http://3.7.66.205",
+                "http://3.7.66.205:80"
+        ));
+        config.setAllowedMethods(List.of(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS"
+        ));
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
+
+        UrlBasedCorsConfigurationSource source =
+                new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", config);
+
         return source;
     }
 }
